--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   background: #111;
   color: white;
   text-align: center;
-  font-family: Arial;
+  font-family: Arial, sans-serif;
 }
 
 canvas {
